# dev-lab

./: LICENSE  README.md
.github/workflows/: jdk21-ci.yml  verify-lab.yml  virtual-memory-demo-ci.yml
benchmarks/: TreeBenchmarkDiagnostic.java  pom.xml
benchmarks/src/main/java/com/zhiya/benchmark/: BitwiseBenchmark.java  TreeBenchmark.java  TreeBenchmarkDiagnostic.java
binary-demo/src/main/java/com/zhiya/binary/: BinaryUtils.java  BloomFilterBitMapGuard.java  ConsistentHashBinaryRing.java  DynamicStateGuard.java  GeohashBitwiseSpatialIndex.java  HyperLogLogBitwiseEstimator.java  LeetCodeBitwiseClassics.java  SnowflakeBitwiseGenerator.java
jvm-demo/jvm-demo/scripts/: run-jvm-demos.sh
jvm-demo/scripts/: run-jvm-demos.sh
jvm-demo/src/main/java/com/zhiya/classloading/: Jvm02ClassLoadingMechanism.java
jvm-demo/src/main/java/com/zhiya/gc/: Jvm05GcLoggingDiagnosis.java  Jvm06MonitoringDemo.java
jvm-demo/src/main/java/com/zhiya/object/: Jvm03ObjectLayoutTlab.java
jvm-demo/src/main/java/com/zhiya/oom/: DirectBufferMemoryOom.java  GcOverheadLimitOom.java  HeapSpaceOom.java  MetaspaceOom.java
jvm-demo/src/main/java/com/zhiya/runtime/: Jvm01RuntimeDataArea.java
jvm-demo/src/main/java/com/zhiya/sync/: Jvm04SyncLockUpgrade.java
tree-demo/src/main/java/com/zhiya/tree/: BPlusTree.java  BST.java  BTree.java  MaxHeap.Java  MinHeap.java  NonRecursiveTraversal.java  RedBlackTree.java  SkipList.java  Trie.java
virtual-memory-demo/: CMakeLists.txt  Makefile  README.md
virtual-memory-demo/include/: vm_probe.h
virtual-memory-demo/src/: CMakeLists.txt  vm01_address_space_layout.cpp  vm02_base_limit_translation.cpp  vm03_page_table_walk.cpp  vm04_demand_paging.cpp  vm05_tlb_sensitivity.cpp  vm06_copy_on_write.cpp  vm07_page_replacement.cpp  vm08_ept_nested_walk.cpp
